tests/res/types/invoke_arity.say
type Math {
    pub fn add(a, b) {
        return a + b;
    }
}

say m = Math();
m.add(1); // error: add expects 2 arguments, but was called with 1
